remove necessary locks, add admin router
